# lego-cam-1

./: README.md  config.example.toml  pyproject.toml  requirements.txt  thonny_run.py
deploy/: SERVICE.md  lego-cam.service
scripts/: calibrate_tmf8820.py  tof_diagnose.py
src/lego_cam/: config.py  controller.py  led.py  logging_setup.py  main.py  sensor_test.py  storage.py
src/lego_cam.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/lego_cam/camera/: __init__.py  picamera2_recorder.py
src/lego_cam/motion/: __init__.py  vision_motion.py
src/lego_cam/sensors/: __init__.py  base.py  tof_i2c.py
